--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>김종환 이승민 결혼합니다</title>
     <meta name="description" content="김장환 이승민 4/19 에 결혼합니다.">
     <meta name="author" content="Janghwan Kim">
+ 	<meta name="robots" content="noindex" />
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
