--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 		</div>
 	</div>
 
-	<h1 class="title">저희 결혼식에 모십니다 &#9835;</h1>
 	<div class="index-logo">
+		<h1 class="title">저희 결혼식에 모십니다 &#9835;</h1>
 		<img alt="couple photo" src="img/photos/img4_320x239.jpg" >
 	</div>
 
@@ -112,8 +112,8 @@
 	<div id='how-to' class="how-to inner-text last">
 		<figure class='subway'><figcaption>지하철</figcaption>
 		<ul>
-			<li>2호선 이대역 1번 출구(100m) 직진 &rarr; 751번, 7017번 탑승 &rarr; 이대부중 하차
-			<li>3호선 독립문역 4번 출구 &rarr; 사거리에서 우회전 &rarr; 극동아파트 정류장에서 버스 승차 470, 601, 750A, 750B, 7737번
+			<li><em>2호선 이대역</em> 1번 출구(100m) 직진 &rarr; 751번, 7017번 탑승 &rarr; 이대부중 하차
+			<li><em>3호선 독립문역</em> 4번 출구 &rarr; 사거리에서 우회전 &rarr; 극동아파트 정류장에서 버스 승차 470, 601, 750A, 750B, 7737번
 		</ul></figure>
 
 		<figure class="shuttle"><figcaption>셔틀버스</figcaption>
@@ -123,9 +123,9 @@
 
 		<figure class="bus"><figcaption>버스</figcaption>
 		<ul>
-			<li>간선버스(파랑): 272, 370, 470, 601, 606, 607, 672, 700, 707, 708, 710, 750(A,B), 751번
-			<li>지선버스(초록): 6714, 7017, 7024, 7737번
-			<li>광역버스(빨강): 567파주, 770고양, 76고양 / 공항버스 6011번
+			<li><em>간선버스(파랑)</em>: 272, 370, 470, 601, 606, 607, 672, 700, 707, 708, 710, 750(A,B), 751번
+			<li><em>지선버스(초록)</em>: 6714, 7017, 7024, 7737번
+			<li><em>광역버스(빨강)</em>: 567파주, 770고양, 76고양 / 공항버스 6011번
 		</ul></figure>
 
 		<figure class='car'><figcaption>승용차</figcaption>
