--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
 
-	<!--
+	<!-- sliderkit -->
 	<link rel="stylesheet" type="text/css" href="lib/sliderkit/css/sliderkit-core.css" media="screen, projection" />
 	<script src="lib/sliderkit/js/jquery.sliderkit.1.9.2.pack.js" type="text/javascript"></script>
 	<script type="text/javascript">
@@ -32,7 +32,6 @@
 			});
 		});
 	</script>
-	-->
 
     <!-- Update these with your own images
       <link rel="shortcut icon" href="images/favicon.ico">
@@ -51,7 +50,7 @@
 			<ul class="nav pull-right">
 				<!--li><a class="brand" href="."><i class="icon-home red"></i></a></li-->
 				<li><a href="#location">오시는 길</a></li>
-				<!--li><a href="#gallery">갤러리</a></li-->
+				<li><a href="#gallery">갤러리</a></li>
 				<!--li><a href="faq.html">자주 묻는 질문</a></li-->
 				<!--li><a href="guestbook.html">방명록</a></li-->
 			</ul>
@@ -60,25 +59,8 @@
 
 	<div class="index-logo">
 		<h1 class="title">저희 결혼식에 모십니다 &#9835;</h1>
-		<img alt="couple photo" src="img/photos/img4_320x239.jpg" >
+		<img alt="couple photo" src="img/photos/img4_320x240.jpg" >
 	</div>
-
-	<!--div id="gallery" class="gallery">
-		<div class="sliderkit photoslider-mini">
-			<div class="sliderkit-panels">
-				<div class="sliderkit-btn sliderkit-go-btn sliderkit-go-prev"><a href="#" title="Previous"><span>Previous</span></a></div>
-				<div class="sliderkit-btn sliderkit-go-btn sliderkit-go-next"><a href="#" title="Next"><span>Next</span></a></div>
-
-				<div class="sliderkit-panel"><a href="#" title="[Link title text]"><img src="img/photos/img1.jpg" alt="[Alternative text]" /></a></div>
-				<div class="sliderkit-panel"><a href="#" title="[Link title text]"><img src="img/photos/img2.jpg" alt="[Alternative text]" /></a></div>
-				<div class="sliderkit-panel"><a href="#" title="[Link title text]"><img src="img/photos/img3.jpg" alt="[Alternative text]" /></a></div>
-				<div class="sliderkit-panel"><a href="#" title="[Link title text]"><img src="img/photos/img4.jpg" alt="[Alternative text]" /></a></div>
-				<div class="sliderkit-panel"><a href="#" title="[Link title text]"><img src="img/photos/img5.jpg" alt="[Alternative text]" /></a></div>
-				<div class="sliderkit-panel"><a href="#" title="[Link title text]"><img src="img/photos/img6.jpg" alt="[Alternative text]" /></a></div>
-				<div class="sliderkit-panel"><a href="#" title="[Link title text]"><img src="img/photos/img7.jpg" alt="[Alternative text]" /></a></div>
-			</div>
-		</div>
-	</div-->
 
 	<div class="ribbon">
 		<h4>
@@ -96,6 +78,8 @@
 	</div>
 
 	<div id="info" class="info text-center inner-text">
+		<h4>일시 · 장소</h4>
+
 		2015년 4월 19일 일요일 오후 1시<br/>
 		<span class="red">연세대학교 동문회관 3층 예식홀</span>
 		<br/>
@@ -109,7 +93,9 @@
 		</div>
 	</div>
 
-	<div id='how-to' class="how-to inner-text last">
+	<div id='how-to' class="how-to inner-text">
+		<h4>오시는 길</h4>
+
 		<figure class='subway'><figcaption>지하철</figcaption>
 		<ul>
 			<li><em>2호선 이대역</em> 1번 출구(100m) 직진 &rarr; 751번, 7017번 탑승 &rarr; 이대부중 하차
@@ -134,6 +120,28 @@
 		</p>
 		</figure>
 	</div>
+
+	<div id="gallery" class="info inner-text gallery last">
+		<h4>갤러리 </h4>
+
+		<div class="sliderkit photoslider-mini">
+			<div class="sliderkit-panels">
+				<div class="sliderkit-btn sliderkit-go-btn sliderkit-go-prev"><a href="#" class="button" title="Previous">
+					<span class="glyphicon glyphicon-align-left" aria-hidden="true">&lt;</span>
+				</a></div>
+				<div class="sliderkit-btn sliderkit-go-btn sliderkit-go-next"><a href="#" title="Next"><span>&gt;</span></a></div>
+
+				<div class="sliderkit-panel"><!--a href="#" title="사진1"--><img src="img/photos/img1_320x240.jpg" alt="[Alternative text]" /></a></div>
+				<div class="sliderkit-panel"><!--a href="#" title="사진2"--><img src="img/photos/img2_170x240.jpg" alt="[Alternative text]" /></a></div>
+				<div class="sliderkit-panel"><!--a href="#" title="사진3"--><img src="img/photos/img3_320x240.jpg" alt="[Alternative text]" /></a></div>
+				<div class="sliderkit-panel"><!--a href="#" title="사진4"--><img src="img/photos/img4_320x240.jpg" alt="[Alternative text]" /></a></div>
+				<div class="sliderkit-panel"><!--a href="#" title="사진5"--><img src="img/photos/img5_320x240.jpg" alt="[Alternative text]" /></a></div>
+				<div class="sliderkit-panel"><!--a href="#" title="사진6"--><img src="img/photos/img6_320x240.jpg" alt="[Alternative text]" /></a></div>
+				<div class="sliderkit-panel"><!--a href="#" title="사진7"--><img src="img/photos/img7_320x240.jpg" alt="[Alternative text]" /></a></div>
+			</div>
+		</div>
+	</div>
+
 </div>
 
 </body>
