--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
 <div class="content paper">
 	<div class="navbar"> <!-- navbar-static-top"-->
 		<div class="navbar-inner">
-			<a class="brand" href=""><i class="icon-home red">&nbsp;</i></a>
+			<a class="brand" href=""><i class="icon-heart red">&nbsp;</i></a>
 			<ul class="nav pull-right">
-				<!--li><a class="brand" href="."><i class="icon-home red"></i></a></li-->
 				<li><a href="#location">오시는 길</a></li>
 				<li><a href="#gallery">갤러리</a></li>
 				<!--li><a href="faq.html">자주 묻는 질문</a></li-->
@@ -98,20 +97,20 @@
 
 		<figure class='subway'><figcaption>지하철</figcaption>
 		<ul>
-			<li><em>2호선 이대역</em> 1번 출구(100m) 직진 &rarr; 751번, 7017번 탑승 &rarr; 이대부중 하차
-			<li><em>3호선 독립문역</em> 4번 출구 &rarr; 사거리에서 우회전 &rarr; 극동아파트 정류장에서 버스 승차 470, 601, 750A, 750B, 7737번
+			<li><em class='transport'>2호선 이대역</em> 1번 출구(100m) 직진 &rarr; 751번, 7017번 탑승 &rarr; 이대부중 하차
+			<li><em class='transport'>3호선 독립문역</em> 4번 출구 &rarr; 사거리에서 우회전 &rarr; 극동아파트 정류장에서 버스 승차 470, 601, 750A, 750B, 7737번
 		</ul></figure>
 
 		<figure class="shuttle"><figcaption>셔틀버스</figcaption>
 		<ul>
-			<li>(12:20 / 12:40) 2호선 이대역 3번 출구 앞 &rarr; 동문회관
+			<li>(12:20 / 12:40) <em>2호선 이대역 3번 출구</em> 앞 &rarr; 동문회관
 		</ul></figure>
 
 		<figure class="bus"><figcaption>버스</figcaption>
 		<ul>
-			<li><em>간선버스(파랑)</em>: 272, 370, 470, 601, 606, 607, 672, 700, 707, 708, 710, 750(A,B), 751번
-			<li><em>지선버스(초록)</em>: 6714, 7017, 7024, 7737번
-			<li><em>광역버스(빨강)</em>: 567파주, 770고양, 76고양 / 공항버스 6011번
+			<li><em class='transport'>간선버스(파랑)</em>: 272, 370, 470, 601, 606, 607, 672, 700, 707, 708, 710, 750(A,B), 751번
+			<li><em class='transport'>지선버스(초록)</em>: 6714, 7017, 7024, 7737번
+			<li><em class='transport'>광역버스(빨강)</em>: 567파주, 770고양, 76고양 / 공항버스 6011번
 		</ul></figure>
 
 		<figure class='car'><figcaption>승용차</figcaption>
