update images to 640x480

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 				circular:true,
 				fastchange:false
 			});
+
 		});
 	</script>
 
@@ -130,13 +131,13 @@
 				</a></div>
 				<div class="sliderkit-btn sliderkit-go-btn sliderkit-go-next"><a href="#" title="Next"><span>&gt;</span></a></div>
 
-				<div class="sliderkit-panel"><!--a href="#" title="사진1"--><img src="img/photos/img1_320x240.jpg" alt="[Alternative text]" /></a></div>
-				<div class="sliderkit-panel"><!--a href="#" title="사진2"--><img src="img/photos/img2_170x240.jpg" alt="[Alternative text]" /></a></div>
-				<div class="sliderkit-panel"><!--a href="#" title="사진3"--><img src="img/photos/img3_320x240.jpg" alt="[Alternative text]" /></a></div>
-				<div class="sliderkit-panel"><!--a href="#" title="사진4"--><img src="img/photos/img4_320x240.jpg" alt="[Alternative text]" /></a></div>
-				<div class="sliderkit-panel"><!--a href="#" title="사진5"--><img src="img/photos/img5_320x240.jpg" alt="[Alternative text]" /></a></div>
-				<div class="sliderkit-panel"><!--a href="#" title="사진6"--><img src="img/photos/img6_320x240.jpg" alt="[Alternative text]" /></a></div>
-				<div class="sliderkit-panel"><!--a href="#" title="사진7"--><img src="img/photos/img7_320x240.jpg" alt="[Alternative text]" /></a></div>
+				<div class="sliderkit-panel"><!--a href="#" title="사진1"--><img src="img/photos/img1_640x480.jpg" alt="사진1" /></a></div>
+				<div class="sliderkit-panel"><!--a href="#" title="사진2"--><img src="img/photos/img2_480x640.jpg" alt="사진2" /></a></div>
+				<div class="sliderkit-panel"><!--a href="#" title="사진3"--><img src="img/photos/img3_640x480.jpg" alt="사진3" /></a></div>
+				<div class="sliderkit-panel"><!--a href="#" title="사진4"--><img src="img/photos/img4_640x480.jpg" alt="사진4" /></a></div>
+				<div class="sliderkit-panel"><!--a href="#" title="사진5"--><img src="img/photos/img5_640x480.jpg" alt="사진5" /></a></div>
+				<div class="sliderkit-panel"><!--a href="#" title="사진6"--><img src="img/photos/img6_640x480.jpg" alt="사진6" /></a></div>
+				<div class="sliderkit-panel"><!--a href="#" title="사진7"--><img src="img/photos/img7_640x480.jpg" alt="사진7" /></a></div>
 			</div>
 		</div>
 	</div>
