--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
 
 	<!-- sliderkit -->
+	<!--
 	<link rel="stylesheet" type="text/css" href="lib/sliderkit/css/sliderkit-core.css" media="screen, projection" />
 	<script src="lib/sliderkit/js/jquery.sliderkit.1.9.2.pack.js" type="text/javascript"></script>
 	<script type="text/javascript">
@@ -31,6 +32,27 @@
 				fastchange:false
 			});
 
+		});
+	</script>
+	-->
+
+	<!-- swiper -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.0.6/css/swiper.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.0.6/css/swiper.min.css">
+ 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.0.6/js/swiper.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.0.6/js/swiper.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.0.6/js/swiper.jquery.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.0.6/js/swiper.jquery.min.js"></script>
+	<script>
+		$(function() {
+			var swiper = new Swiper('.swiper-container', {
+				pagination: '.swiper-pagination',
+				paginationClickable: '.swiper-pagination',
+				nextButton: '.swiper-button-next',
+				prevButton: '.swiper-button-prev',
+				spaceBetween: 30
+			});
 		});
 	</script>
 
