--- a/index.html
+++ b/index.html
@@ -18,12 +18,8 @@
 	<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
 
 	<!-- swiper -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.0.6/css/swiper.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.0.6/css/swiper.min.css">
- 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.0.6/js/swiper.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.0.6/js/swiper.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.0.6/js/swiper.jquery.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.0.6/js/swiper.jquery.min.js"></script>
 	<script>
 		$(function() {
@@ -66,6 +62,10 @@
 			});
 		});
 	</script>
+
+	<!-- lightbox -->
+	<script src="lib/lightbox/js/lightbox.min.js"></script>
+	<link href="lib/lightbox/css/lightbox.css" rel="stylesheet" />
 
     <!-- Update these with your own images
       <link rel="shortcut icon" href="images/favicon.ico">
@@ -159,13 +159,13 @@
 
 		<div class="swiper-container">
 			<div class="swiper-wrapper">
-				<div class="swiper-slide"><img src="img/photos/img1_640x480.jpg" alt="2014년 6월 6일 / 부산 해운대 모래 축제"><div class="description"><p class="title"> 부산 해운대 모래 축제 <p class="date">2014년 6월 6일 </p></p></div></div>
-				<div class="swiper-slide"><img src="img/photos/img2_360x480.jpg" alt="2014년 9월 21일 / 건대 롯데백화점"><div class="description"><p class="title"> 건대 롯데백화점 <p class="date">2014년 9월 21일 </p></p></div></div>
-				<div class="swiper-slide"><img src="img/photos/img3_640x480.jpg" alt="2014년 12월 31일 / 김종환의 생일날"><div class="description"><p class="title"> 김종환의 생일날 <p class="date">2014년 12월 31일 </p></p></div></div>
-				<div class="swiper-slide"><img src="img/photos/img4_640x480.jpg" alt="2014년 6월 6일 / 부산 보수동 책 골목"><div class="description"><p class="title"> 부산 보수동 책 골목 <p class="date">2014년 6월 6일 </p></p></div></div>
-				<div class="swiper-slide"><img src="img/photos/img5_640x480.jpg" alt="2013년 5월 5일 / 외대앞 달콤커피"><div class="description"><p class="title"> 외대앞 달콤커피 <p class="date">2013년 5월 5일 </p></p></div></div>
-				<div class="swiper-slide"><img src="img/photos/img6_640x480.jpg" alt="2013년 5월 5일 / 외대앞 달콤커피"><div class="description"><p class="title"> 외대앞 달콤커피 <p class="date">2013년 5월 5일 </p></p></div></div>
-				<div class="swiper-slide"><img src="img/photos/img7_640x480.jpg" alt="2013년 10월 20일 / 충무로 식당"><div class="description"><p class="title"> 충무로 식당 <p class="date">2013년 10월 20일 </p></p></div></div>
+				<div class="swiper-slide"><a href="img/photos/img1.jpg" data-lightbox="gallery" data-title="2014년 6월 6일 / 부산 해운대 모래 축제" ><img src="img/photos/img1_640x480.jpg" alt= /></a><div class="description"><p class="title"> 부산 해운대 모래 축제 </p><p class="date">2014년 6월 6일 </p></div></div>
+				<div class="swiper-slide"><a href="img/photos/img2.jpg" data-lightbox="gallery" data-title="2014년 9월 21일 / 건대 롯데백화점" ><img src="img/photos/img2_360x480.jpg" alt=></a><div class="description"><p class="title"> 건대 롯데백화점 <p class="date">2014년 9월 21일 </p></div></div>
+				<div class="swiper-slide"><a href="img/photos/img3.jpg" data-lightbox="gallery" data-title="2014년 12월 31일 / 김종환의 생일날" ><img src="img/photos/img3_640x480.jpg" alt=></a><div class="description"><p class="title"> 김종환의 생일날 <p class="date">2014년 12월 31일 </p></div></div>
+				<div class="swiper-slide"><a href="img/photos/img4.jpg" data-lightbox="gallery" data-title="2014년 6월 6일 / 부산 보수동 책 골목" ><img src="img/photos/img4_640x480.jpg" alt=></a><div class="description"><p class="title"> 부산 보수동 책 골목 <p class="date">2014년 6월 6일 </p></div></div>
+				<div class="swiper-slide"><a href="img/photos/img5.jpg" data-lightbox="gallery" data-title="2013년 5월 5일 / 외대앞 달콤커피" ><img src="img/photos/img5_640x480.jpg" alt=></a><div class="description"><p class="title"> 외대앞 달콤커피 <p class="date">2013년 5월 5일 </p></div></div>
+				<div class="swiper-slide"><a href="img/photos/img6.jpg" data-lightbox="gallery" data-title="2013년 5월 5일 / 외대앞 달콤커피" ><img src="img/photos/img6_640x480.jpg" alt=></a><div class="description"><p class="title"> 외대앞 달콤커피 <p class="date">2013년 5월 5일 </p></div></div>
+				<div class="swiper-slide"><a href="img/photos/img7.jpg" data-lightbox="gallery" data-title="2013년 10월 20일 / 충무로 식당" ><img src="img/photos/img7_640x480.jpg" alt=></a><div class="description"><p class="title"> 충무로 식당 <p class="date">2013년 10월 20일 </p></div></div>
 			</div>
 			<div class="swiper-pagination"></div>
 			<div class="swiper-button-next"></div>
