put date in one-line

--- a/index.html
+++ b/index.html
@@ -159,13 +159,13 @@
 
 		<div class="swiper-container">
 			<div class="swiper-wrapper">
-				<div class="swiper-slide"><a href="img/photos/img1.jpg" data-lightbox="gallery" data-title="2014년 6월 6일 / 부산 해운대 모래 축제" ><img src="img/photos/img1_640x480.jpg" alt= /></a><div class="description"><p class="title"> 부산 해운대 모래 축제 </p><p class="date">2014년 6월 6일 </p></div></div>
-				<div class="swiper-slide"><a href="img/photos/img2.jpg" data-lightbox="gallery" data-title="2014년 9월 21일 / 건대 롯데백화점" ><img src="img/photos/img2_360x480.jpg" alt=></a><div class="description"><p class="title"> 건대 롯데백화점 <p class="date">2014년 9월 21일 </p></div></div>
-				<div class="swiper-slide"><a href="img/photos/img3.jpg" data-lightbox="gallery" data-title="2014년 12월 31일 / 김종환의 생일날" ><img src="img/photos/img3_640x480.jpg" alt=></a><div class="description"><p class="title"> 김종환의 생일날 <p class="date">2014년 12월 31일 </p></div></div>
-				<div class="swiper-slide"><a href="img/photos/img4.jpg" data-lightbox="gallery" data-title="2014년 6월 6일 / 부산 보수동 책 골목" ><img src="img/photos/img4_640x480.jpg" alt=></a><div class="description"><p class="title"> 부산 보수동 책 골목 <p class="date">2014년 6월 6일 </p></div></div>
-				<div class="swiper-slide"><a href="img/photos/img5.jpg" data-lightbox="gallery" data-title="2013년 5월 5일 / 외대앞 달콤커피" ><img src="img/photos/img5_640x480.jpg" alt=></a><div class="description"><p class="title"> 외대앞 달콤커피 <p class="date">2013년 5월 5일 </p></div></div>
-				<div class="swiper-slide"><a href="img/photos/img6.jpg" data-lightbox="gallery" data-title="2013년 5월 5일 / 외대앞 달콤커피" ><img src="img/photos/img6_640x480.jpg" alt=></a><div class="description"><p class="title"> 외대앞 달콤커피 <p class="date">2013년 5월 5일 </p></div></div>
-				<div class="swiper-slide"><a href="img/photos/img7.jpg" data-lightbox="gallery" data-title="2013년 10월 20일 / 충무로 식당" ><img src="img/photos/img7_640x480.jpg" alt=></a><div class="description"><p class="title"> 충무로 식당 <p class="date">2013년 10월 20일 </p></div></div>
+				<div class="swiper-slide"><a href="img/photos/img1.jpg" data-lightbox="gallery" data-title="2014년 6월 6일 / 부산 해운대 모래 축제" ><img src="img/photos/img1_640x480.jpg" alt= /></a><div class="description"><p class="title"> 부산 해운대 모래 축제 <span class="date">2014년 6월 6일</span> </p></div></div>
+				<div class="swiper-slide"><a href="img/photos/img2.jpg" data-lightbox="gallery" data-title="2014년 9월 21일 / 건대 롯데백화점" ><img src="img/photos/img2_360x480.jpg" alt=></a><div class="description"><p class="title"> 건대 롯데백화점 <span class="date">2014년 9월 21일</span> </p></div></div>
+				<div class="swiper-slide"><a href="img/photos/img3.jpg" data-lightbox="gallery" data-title="2014년 12월 31일 / 김종환의 생일날" ><img src="img/photos/img3_640x480.jpg" alt=></a><div class="description"><p class="title"> 김종환의 생일날 <span class="date">2014년 12월 31일</span> </p></div></div>
+				<div class="swiper-slide"><a href="img/photos/img4.jpg" data-lightbox="gallery" data-title="2014년 6월 6일 / 부산 보수동 책 골목" ><img src="img/photos/img4_640x480.jpg" alt=></a><div class="description"><p class="title"> 부산 보수동 책 골목 <span class="date">2014년 6월 6일</span> </p></div></div>
+				<div class="swiper-slide"><a href="img/photos/img5.jpg" data-lightbox="gallery" data-title="2013년 5월 5일 / 외대앞 달콤커피" ><img src="img/photos/img5_640x480.jpg" alt=></a><div class="description"><p class="title"> 외대앞 달콤커피 <span class="date">2013년 5월 5일</span> </p></div></div>
+				<div class="swiper-slide"><a href="img/photos/img6.jpg" data-lightbox="gallery" data-title="2013년 5월 5일 / 외대앞 달콤커피" ><img src="img/photos/img6_640x480.jpg" alt=></a><div class="description"><p class="title"> 외대앞 달콤커피 <span class="date">2013년 5월 5일</span> </p></div></div>
+				<div class="swiper-slide"><a href="img/photos/img7.jpg" data-lightbox="gallery" data-title="2013년 10월 20일 / 충무로 파스타집" ><img src="img/photos/img7_640x480.jpg" alt=></a><div class="description"><p class="title"> 충무로 파스타집 <span class="date">2013년 10월 20일</span> </p></div></div>
 			</div>
 			<div class="swiper-pagination"></div>
 			<div class="swiper-button-next"></div>
