add facilities page

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 			<ul class="nav pull-right">
 				<li><a href="#location">오시는 길</a></li>
 				<li><a href="#gallery">갤러리</a></li>
+				<li><a href="facilities.html">편의시설</a></li>
 				<!--li><a href="faq.html">자주 묻는 질문</a></li-->
 				<!--li><a href="guestbook.html">방명록</a></li-->
 			</ul>
@@ -91,16 +92,12 @@
 	</div>
 
 	<div class="index-logo">
-		<h1 class="title">저희 결혼식에 모십니다 &#9835;</h1>
-		<img alt="couple photo" src="img/photos/img4_320x240.jpg" >
+		<h1 class="title">저희 결혼합니다 &#9835;</h1>
+		<img alt="couple photo" src="img/photos/img4_640x480.jpg" >
 	</div>
 
 	<div class="ribbon">
-		<h4>
-			<span class="name">김종환</span> 
-			&amp; 
-			<span class="name">이승민</span>
-		</h4>
+		<h4> <span class="name">김종환</span> &amp; <span class="name">이승민</span> </h4>
 	</div>
 
 	<div class="message text-center inner-text">
@@ -113,12 +110,14 @@
 	<div id="info" class="info text-center inner-text">
 		<h4>일시 · 장소</h4>
 
-		2015년 4월 19일 일요일 오후 1시<br/>
+		<p class="date">
+			2015년 4월 19일 일요일 오후 1시
+		</p>
 		<span class="red">연세대학교 동문회관 3층 예식홀</span>
 		<br/>
 		<br/>
 		<div id="location" class="location">
-			<img id="map" alt="location map" src="img/map.jpg">
+			<a href="img/map.jpg" data-lightbox="map"><img id="map" alt="location map" src="img/map.jpg"></a>
 			<div class='address'>
 				서울 서대문구 연세로 50 (신촌동 134) <br>
 				TEL 02-2123-4760~1 <br>
@@ -149,7 +148,8 @@
 
 		<figure class='car'><figcaption>승용차</figcaption>
 		<p>
-			<em>동문회관 주차장</em> 이용 : 2시간 무료, 연세대학교 정문 방향에서 오시는 분은 <em>금화터널 고가도로</em> 밑에서 유턴하시면 됩니다.
+			<em>동문회관 주차장</em> 이용 : 2시간 무료, 연세대학교 정문 방향에서 오시는 분은 <em>금화터널 고가도로</em> 밑에서 유턴하시면 됩니다. 2014년부터 신촌로터리-연세대 정문 도로는 '<em>차없는 거리</em>'로 지정돼 차량통행이 불가한 점 유념하세요. <br>
+			<em>휠체어 차량</em> 주차 관련은 <a href="facilities.html">여기</a>를 참고하세요.
 		</p>
 		</figure>
 	</div>
