--- a/facilities.html
+++ b/facilities.html
@@ -17,6 +17,10 @@
 
 	<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
 
+	<!-- lightbox -->
+	<script src="lib/lightbox/js/lightbox.min.js"></script>
+	<link href="lib/lightbox/css/lightbox.css" rel="stylesheet" />
+
     <!-- Update these with your own images
       <link rel="shortcut icon" href="images/favicon.ico">
       <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
@@ -53,28 +57,28 @@
 		<h4>휠체어 차량 주차 안내</h4>
 
         <figure>
-            <img src="img/facilities/사진1.png" alt="찾아오는 길">
+            <a href="img/facilities/사진1.png" data-lightbox="찾아오는 길"><img src="img/facilities/사진1_640.png" alt="찾아오는 길"></a>
             <figcaption>
                 <em>금화터널 앞 고가도로 아래</em>에서 유턴을 한 뒤, 오른쪽에 보이는 동문회관을 지나기 전에 주차장 입구로 들어옵니다.
             </figcaption>
         </figure>
 
         <figure>
-            <img src="img/facilities/사진2.png" alt="주차장 들어오는 길">
+            <a href="img/facilities/사진2.png" data-lightbox="주차장 들어오는 길"><img src="img/facilities/사진2_640.png" alt="주차장 들어오는 길"></a>
             <figcaption>
                 차도에서 <em>주차장 입구</em>로 들어오면 3개의 길(A,B,C)이 보입니다. A쪽 진입로는 경사로가 없기 때문에 주차 후 실내로 들어오기가 어렵기 때문에 B 또는 C로 들어옵니다.
             </figcaption>
         </figure>
 
         <figure>
-            <img src="img/facilities/사진3.jpg" alt="장애인 주차장">
+            <a href="img/facilities/사진3.jpg" data-lightbox="장애인 주차장"><img src="img/facilities/사진3_640.jpg" alt="장애인 주차장"></a>
             <figcaption>
                 B 또는 C로 들어오면, 지붕이 있는 주차공간이 나오고 여기에 <em>장애인 주차장</em>이 있습니다.
             </figcaption>
         </figure>
 
         <figure>
-            <img src="img/facilities/사진4.png" alt="경사로">
+            <a href="img/facilities/사진4.png" data-lightbox="경사로"><img src="img/facilities/사진4_640.png" alt="경사로"></a>
             <figcaption>
                 주차장은 건물 1층(B) 또는 2층(C)으로 바로 이어집니다. 사진의 빨간 원에서 보이는 것처럼 <em>경사로</em>가 있습니다. <br>
                 예식장과 식당은 모두 3층입니다. (식당도 1시부터 이용가능합니다.)
