--- a/facilities.html
+++ b/facilities.html
@@ -36,8 +36,8 @@
 		<div class="navbar-inner">
 			<a class="brand" href=""><i class="icon-heart red">&nbsp;</i></a>
 			<ul class="nav pull-right">
-				<li><a href="#location">오시는 길</a></li>
-				<li><a href="#gallery">갤러리</a></li>
+				<li><a href="index.html#location">오시는 길</a></li>
+				<li><a href="index.html#gallery">갤러리</a></li>
 				<li><a href="facilities.html">편의시설</a></li>
 				<!--li><a href="faq.html">자주 묻는 질문</a></li-->
 				<!--li><a href="guestbook.html">방명록</a></li-->
@@ -46,7 +46,7 @@
 	</div>
 
 	<div class="index-logo">
-		<img alt="couple photo" src="img/photos/img4_640x480.jpg" >
+		<img alt="couple photo" src="img/photos/img6_640x480.jpg" >
 	</div>
 
 	<div class="ribbon">
