let facilities page be more like a separate add-on

--- a/facilities.html
+++ b/facilities.html
@@ -32,29 +32,12 @@
 
 <body class="cork">
 <div class="content paper">
-	<div class="navbar"> <!-- navbar-static-top"-->
-		<div class="navbar-inner">
-			<a class="brand" href=""><i class="icon-heart red">&nbsp;</i></a>
-			<ul class="nav pull-right">
-				<li><a href="index.html#location">오시는 길</a></li>
-				<li><a href="index.html#gallery">갤러리</a></li>
-				<li><a href="facilities.html">편의시설</a></li>
-				<!--li><a href="faq.html">자주 묻는 질문</a></li-->
-				<!--li><a href="guestbook.html">방명록</a></li-->
-			</ul>
-		</div>
-	</div>
-
-	<div class="index-logo">
-		<img alt="couple photo" src="img/photos/img6_640x480.jpg" >
-	</div>
-
-	<div class="ribbon">
-		<h4> <span class="name">김종환</span> &amp; <span class="name">이승민</span> </h4>
-	</div>
+    <div class="back-to-main top">
+        <a href="index.html">« 메인 페이지로 돌아가기</a>
+    </div>
 
 	<div id="parking-facilities" class="parking-facilities inner-text">
-		<h4>휠체어 차량 주차 안내</h4>
+		<h3>휠체어 차량 주차 안내</h3>
 
         <figure>
             <a href="img/facilities/사진1.png" data-lightbox="찾아오는 길"><img src="img/facilities/사진1_640.jpg" alt="찾아오는 길"></a>
@@ -99,7 +82,14 @@
                 지하 1층에는 장애인 칸이 있습니다(자동문은 아닙니다).
             </p>
         </div>
+    </div>
 
+	<div class="tail-image inner-text">
+		<img alt="photo" src="img/photos/img6_640x480.jpg" >
+	</div>
+
+    <div class="back-to-main bottom">
+        <a href="index.html">« 메인 페이지로 돌아가기</a>
     </div>
 
 </div>
