--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.0.6/css/swiper.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.0.6/js/swiper.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.0.6/js/swiper.jquery.min.js"></script>
+
+	<!-- lightbox -->
+	<script src="lib/lightbox/js/lightbox.min.js"></script>
+	<link href="lib/lightbox/css/lightbox.css" rel="stylesheet" />
+
+	<!-- scrollspy -->
+	<script src="lib/jquery-scrollspy/jquery-scrollspy.js"></script>
+
 	<script>
 		$(function() {
 			var swiper = new Swiper('.swiper-container', {
@@ -76,15 +84,20 @@
                     $("#navbar").removeClass('fixed');
                 }
             });
+
+			// scroll-to
+			$('.navbar a').on('click', function(ev) {
+				var $el = $(this);
+				if ($el.attr('href')[0] == '#') {
+					var $target = $($el.attr('href'));
+					$('html, body').animate({
+						scrollTop: $target.offset().top
+					}, 300);
+				}
+			});
+
 		});
 	</script>
-
-	<!-- lightbox -->
-	<script src="lib/lightbox/js/lightbox.min.js"></script>
-	<link href="lib/lightbox/css/lightbox.css" rel="stylesheet" />
-
-	<!-- scrollspy -->
-	<script src="lib/jquery-scrollspy/jquery-scrollspy.js"></script>
 
     <!-- Update these with your own images
       <link rel="shortcut icon" href="images/favicon.ico">
